# editing-with-llms

./: .editing-config.yaml  .gitignore  BAYESIAN_EXPERIMENT.md  CLAUDE.md  EXPERIMENT.md  EXPERIMENT2.md  EXPERIMENT_PROCEDURE.md  FAQ.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  bayesian_phase1.json  compare_models.py  final_strategy_results.json  gemini_respones.md  llm_typo_checker.py  pyproject.toml  strategy_test_results.json  test_final_strategy.py  test_llm_typo_checker.py  true_errors.json  validation_results.json
exploratory_testing/: BAYESIAN_EXPERIMENT.md  IMPROVEMENTS.md  analyze_bayesian.py  bayesian_analysis.json  confidence_test_results.json  model_comparison_results.json  test  test_bayesian.py  test_strategies.py  test_strategies_confidence.py  validate_top_configs.py
src/editing_with_llms/: __init__.py  cli.py  config.py  formatters.py  models.py  parsers.py  prompts.py
tests/: __init__.py  test_cli.py
